--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
     <!---------------------------------- NAVBAR ------------------------------------------->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #414a6b;">
         <a class="navbar-brand" href="#" style="color: #f3c130;">PORTFOLIO</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
