--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <a href="https://www.instagram.com/raaronwebster88/" target="_blank" title="Instagram">
                         <i class="social fab fa-instagram"></i>
                     </a>
-                    <a href="" target="_blank" title="Resume">    
+                    <a href="./assets/credits-2018.pdf" target="_blank" title="Resume">    
                         <i class="social fas fa-file"></i>
                     </a>
                 </div>
